fix: icon invisible #1

--- a/src/app/timer-menu/timer-menu.component.scss
+++ b/src/app/timer-menu/timer-menu.component.scss
@@ -15,7 +15,7 @@
     color: black;
     border: none;
 
-    &.selected {
+    &:hover {
       background-color: #ab0000;
     }
   }
