--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -14,8 +14,44 @@
   }
 }
 
+.auto-button {
+  display: block;
+  border: none;
+  margin: 1em auto;
+  min-width: 100px;
+  border-radius: 5px;
+  padding: .25em;
+  background-color: #ffffffbe;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #ffffffdf;
+  }
+}
+
 .button {
+  display: block;
+  border: none;
+  cursor: pointer;
   margin: 1em 0;
+  margin: 0 auto;
   width: 300px;
   height: 50px;
+
+  &.pause {
+    color: white;
+    background-color: #ff0000;
+
+    &:hover {
+      background-color: #ab0000;
+    }
+  }
+
+  &.continue {
+    background-color: lightgreen;
+
+    &:hover {
+      background-color: rgb(91, 240, 91);
+    }
+  }
 }
